--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-Hant-TW" xml:lang="zh-Hant-TW">
 <head>
-<title>Reapers in the Oasis</title>
+<title>Oasis Waifu</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style>
 
@@ -40,8 +40,31 @@ span.nftdisplay {
 	width: 320px;
 }
 
-span + span {
-	margin-bottom: 2em;
+@font-face {
+	font-family: 'Gensai'; 
+	src: url('GenSenRounded-B_0.ttf');
+}
+
+span.waifu-name-kj {
+        display: inline-block;
+        width: 200px;
+        text-align: center;
+        font-size: 20pt;
+        margin-top: 0.5em;
+        margin-bottom: 0.1em;
+        font-family: 'Gensai', sans-serif;
+        font-weight: bold;
+}
+
+span.waifu-name {
+	display: inline-block;
+	width: 200px;
+	text-align: center;
+	font-size: 12pt;
+}
+
+span.nftdisplay + span.nftdisplay {
+        margin-bottom: 3em;
 }
 
 button {
@@ -96,9 +119,9 @@ input {
 
 
 <!-- Header -->
-<h1>Reapers in the Oasis</h1>
+<h1>Smart Waifus on Oasis</h1>
 <h3>
-	Show Reapers
+	Show Smart Waifus
 	<select name="query-type" id="query-type">
 		<option value="query-listed">listed</option>
 		<option value="query-sold">sold</option>
@@ -116,14 +139,14 @@ input {
 	</select>
 hours&nbsp;&nbsp;<button type="button" onclick="shakeIt()">Submit</button>
 </h3>
-This is an *unofficial* webpage interface to the <a href="https://oasis.cash/" target="_blank">OASIS&thinsp;<img src="icons8-external-link-16_goldish.png"></a> Smart Contract <a href="https://www.smartscan.cash/address/0x3b968177551a2aD9fc3eA06F2F41d88b22a081F7" target="_blank">V2&thinsp;<img src="icons8-external-link-16_goldish.png"></a>. It queries the Event Logs of the Smart Contract and marks up <a href="https://reapers.cash" target="_blank">Reapers&thinsp;<img src="icons8-external-link-16_goldish.png"></a> related entries. NFT information is then obtained by sending queries to the <a href="https://www.smartscan.cash/address/0x48973dbAC0d46B939CD12A7250eFBA965e8a8cf2" target="_blank">Reapers Smart Contract&thinsp;<img src="icons8-external-link-16_goldish.png"></a>.
+This is an *unofficial* webpage interface to the <a href="https://oasis.cash/" target="_blank">OASIS&thinsp;<img src="icons8-external-link-16_goldish.png"></a> Smart Contract <a href="https://www.smartscan.cash/address/0x3b968177551a2aD9fc3eA06F2F41d88b22a081F7" target="_blank">V2&thinsp;<img src="icons8-external-link-16_goldish.png"></a>. It queries the Event Logs of the Smart Contract and marks up entries related to Smart Waifu NFTs. NFT information is then obtained by sending queries to the <a href="https://www.smartscan.cash/address/0x87aA4eF35454fEF0B3E796d20Ab609d3c941F46b" target="_blank">Smart Waifu NFT Contract&thinsp;<img src="icons8-external-link-16_goldish.png"></a>.
 <br><br>
 <!-- <button type="button" onclick="getCurrentPrice()">看價錢</button><br> -->
 <!-- <br> -->
 <!-- <hr> -->
 <!-- <div id="price-of-reaper"></div> -->
 <hr>
-<div id="list-of-reapers" style="text-align: center;"></div>
+<div id="list-of-waifus" style="text-align: center;"></div>
 
 
 
